# Littoral-Naval-Warfare-MARL

./: combatant.py  config.json  landingship.py  main.py  marl_game.py  network.py  ppo.py  pyproject.toml  red_steps.csv  red_steps2.csv  red_steps3.csv  streamlit_marl_gui.py
models/: blue_actor.pth  blue_actor_optimizer.pth  blue_critic.pth  blue_critic_optimizer.pth  red_actor.pth  red_actor_optimizer.pth  red_critic.pth  red_critic_optimizer.pth
